--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-theme: minima
-author: HuiShan
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
