--- a/_config.yml
+++ b/_config.yml
@@ -148,7 +148,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "/BlogPage"
 
 # ------------ The following options are not recommended to be modified ------------------
 
