--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 twitter_username: username
 github_username: huiishan99
-minimal_mistakes_skin: "dark"
+minimal_mistakes_skin: "default"
 search: true
 
 # Build settings
@@ -29,7 +29,7 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
-paginate: 10 # amount of posts to show
+paginate: 20 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -60,11 +60,12 @@ plugins:
 author:
   name   : "Lai HuiShan"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "I am passionate about exploring cutting-edge tools in the technology sector."
+  bio    : "Malaysian."
+  location : "Somewhere, USA"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://huiishan99.github.io/BlogPage/"
+      url: "https://huiishan99.github.io/web-blog/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
