--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,27 +22,27 @@ about:
 
   - title: Timeline
     children:
-      - title: "2024"
+      - title: "Year: 2024"
         url: /about/#year-2024
-      - title: "2023"
+      - title: "Year: 2023"
         url: /about/#year-2023
-      - title: "2022"
+      - title: "Year: 2022"
         url: /about/#year-2022
-      - title: "2021"
+      - title: "Year: 2021"
         url: /about/#year-2021
-      - title: "2020"
+      - title: "Year: 2020"
         url: /about/#year-2020
-      - title: "2018"
+      - title: "Year: 2018"
         url: /about/#year-2018
-      - title: "2017"
+      - title: "Year: 2017"
         url: /about/#year-2017
-      - title: "2015"
+      - title: "Year: 2015"
         url: /about/#year-2015
-      - title: "2012"
+      - title: "Year: 2012"
         url: /about/#year-2012
-      - title: "2011"
+      - title: "Year: 2011"
         url: /about/#year-2011
-      - title: "2006"
+      - title: "Year: 2006"
         url: /about/#year-2006
-      - title: "1999"
+      - title: "Year: 1999"
         url: /about/#year-1999
