--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ author:
   links:
     - label: "中文站点"
       icon: "fas fa-fw fa-link"
-      url: "https://huiishan99.github.io/web-blog/"
+      url: "https://notion-next-huiishan99.vercel.app/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
