--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ author:
       url: "https://github.com/huiishan99"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://instagram.com/huii.shan.9/"
 
 footer:
   links:
@@ -86,7 +86,7 @@ footer:
       url: "https://github.com/huiishan99"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://instagram.com/huii.shan.9/"
 
 defaults:
   # _posts
