--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,9 @@ author:
     - label: "中文站点"
       icon: "fas fa-fw fa-link"
       url: "https://notion-next-huiishan99.vercel.app/"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin-square"
+      url: "https://linkedin.com/in/laihuishan/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/huiishan99"
