--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ author:
       icon: "fas fa-fw fa-link"
       url: "https://notion-next-huiishan99.vercel.app/"
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/laihuishan/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
