Add interactive timeline feature and layout optimizations
Introduced a new interactive timeline page with supporting data in _data/timeline.yml, timeline page at /timeline/, and timeline-specific CSS and JS for enhanced user experience. Updated navigation to link to the new timeline, refactored the About page to show recent highlights and link to the full timeline, and added layout-optimization.css for improved page width and layout. Minor updates to index.html and head includes to load new styles.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "About"
     url: /about/
+  - title: "Timeline"
+    url: /timeline/
   - title: "Posts"
     url: /posts/
   - title: "Projects"
@@ -31,27 +33,7 @@ about:
         url: /about/#htmlcssjs
   - title: Timeline
     children:
-      - title: "Year: 2024"
-        url: /about/#year-2024
-      - title: "Year: 2023"
-        url: /about/#year-2023
-      - title: "Year: 2022"
-        url: /about/#year-2022
-      - title: "Year: 2021"
-        url: /about/#year-2021
-      - title: "Year: 2020"
-        url: /about/#year-2020
-      - title: "Year: 2018"
-        url: /about/#year-2018
-      - title: "Year: 2017"
-        url: /about/#year-2017
-      - title: "Year: 2015"
-        url: /about/#year-2015
-      - title: "Year: 2012"
-        url: /about/#year-2012
-      - title: "Year: 2011"
-        url: /about/#year-2011
-      - title: "Year: 2006"
-        url: /about/#year-2006
-      - title: "Year: 1999"
-        url: /about/#year-1999
+      - title: "Complete Timeline"
+        url: /timeline/
+      - title: "Recent Highlights"
+        url: /about/#timeline
